some more tweaks

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         },
       };
     </script>
+    <!-- Environment Configuration -->
+    <script src="js/env-config.js"></script>
   </head>
   <body class="min-h-screen flex flex-col bg-off-white">
     <header class="bg-deep-blue text-white p-4">
